# finlearn-api-pds2

./: .env  .gitignore  pyproject.toml  teste_de_carga.js
alembic/: env.py
alembic/versions/: 28da73908298_criando_tabela_contact.py  32cd1f4261b1_adicionando_tabela_user_e_userrole.py  e7ac1a06b5a5_adicionando_tabelas_post_reply_e_.py  eb4a1df16526_adicionando_password.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  contact.py  network.py  practice.py  user.py
app/config/: settings.py
app/core/entities/: base.py
app/core/middleware/: auth.py  error_handler.py
app/core/models/: api_aux.py  ddd_aux.py
app/domains/contact/adapters/: orm.py  repository.py
app/domains/contact/domain/: contact.py
app/domains/contact/models/: contact_model.py
app/domains/network/adapters/: orm.py  repository.py
app/domains/network/domain/: network.py
app/domains/network/models/: network_model.py
app/domains/user/adapters/: orm.py  repository.py
app/domains/user/domain/: user.py
app/domains/user/models/: user_model.py
test/domains/user/: test_user_domain.py
