[tool.poetry]
name = "finlearn-api-pds2"
version = "0.1.0"
description = ""
authors = ["Leonardo Paiva <leonardo@biomainvestimentos.com>"]
readme = "README.md"
packages = [{include = "finlearn_api_pds2"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.10.1"
fastapi = "^0.104.0"
SQLAlchemy = "^2.0.22"
alembic = "^1.12.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
psycopg2-binary = "^2.9.9"
passlib = "^1.7.4"
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
pyjwt = "^2.8.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
